Time: 27 ms (41.47%), Space: 42 MB (34.74%) - LeetHub